--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                org.example.databaselocalizationdemo/org.example.databaselocalizationdemo.HelloApplication
+                                org.example.databaselocalizationdemo/HelloApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
